--- a/index.html
+++ b/index.html
@@ -11831,7 +11831,7 @@ a.anchor-link {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Hello everyone! My name is Amit Saha and today I am here to talk to about "Doing Math with Python".</p>
+<p>Hello everyone! My name is Dr Amit Saha and today I am here to talk to about "Doing Math with Python".</p>
 <p>Thank you for coming to my talk - i know you could have chosen the other talk, so it's good to know that my talk's topic interests you.</p>
 <p>A bit about me - I am a software engineer at Freelancer.com in Sydney Australia.  I am a fairly regular writer for Linux Voice and other Linux magazines. And last, but not the least, I am the author of the book "Doing Math with Python" (not coincidentally titled the same as this talk - haha) published by No Starch Press in 2015.</p>
 <p>There is a link to my blog, GitHub, twitter, etc. so, if you want to learn more about my work or get in touch, those are the means to do so!</p>
